--- a/styls/portfolio.css
+++ b/styls/portfolio.css
@@ -20,6 +20,7 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin: 0 200px;
 }
 
 .nav-title {
@@ -41,4 +42,61 @@ nav li {
 nav a {
     text-decoration: none;
     color: rgb(150, 142, 228);
+}
+
+.header {
+    background-color: #e0d0ee;
+    background-image: url('../images/header\ purple.jpg');
+    background-repeat: no-repeat;
+    background-position: bottom right;
+}
+
+.banner {
+    padding: 50px 50px 0px 200px;
+    display: flex;
+    align-items: center;
+}
+
+.banner .pfp {
+    width: 500px;
+}
+
+.pfp {
+    position: relative;
+    top: 24px;
+    left: 180px;
+}
+
+.about {
+    padding: 130px;
+    border-radius: 10px;
+    background: #e0d0ee;
+    margin: 130px 0;
+}
+
+.sctn-title {
+    color: #181818;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+}
+
+.sctn-description {
+    color: #757575;
+    text-align: center;
+    font-size: 18px;
+}
+main {
+    max-width: 1140px;
+    margin: 0 auto;
+}
+.about-info-container {
+    display: flex;
+    justify-content: space-around;
+}
+.about-info {
+    text-align: center;
+}
+#what-i-do-description{
+    padding: 50px 200px;
 }
