--- a/styls/portfolio.css
+++ b/styls/portfolio.css
@@ -82,21 +82,44 @@ nav a {
 }
 
 .sctn-description {
-    color: #757575;
+    color: rgb(150, 142, 228);
     text-align: center;
     font-size: 18px;
 }
+
 main {
     max-width: 1140px;
     margin: 0 auto;
 }
+
 .about-info-container {
     display: flex;
     justify-content: space-around;
 }
+
 .about-info {
     text-align: center;
 }
-#what-i-do-description{
+
+#what-i-do-description {
     padding: 50px 200px;
+}
+
+.skills-container {
+    display: flex;
+    gap: 24px;
+}
+
+.skill {
+    padding: 33px;
+    border-radius: 5px;
+    background: #e0d0ee;
+    box-shadow: 0px 6px 50px 0px rgba(114, 100, 245, 0.466)
+}
+
+.skill-descripsition {
+    color:rgb(150, 142, 228);
+}
+main section {
+    margin-top: 130px;
 }
